# rnnt_inference

./: CMakeLists.txt  NEON_2_SSE.h  README.md  beam_search.cpp  beam_search.h  beams.cpp  beams.h  bit_utils.h  buf_type.h  common_neon.h  copy_neon.h  fbank_80_201.h  feat.cpp  feat.h  fmadd_neon.h  input_processing.cpp  input_processing.h  model_structs.h  normalize_vals.h  onnx_inference.cpp  onnxruntime_cxx_api.h  rnnt_attrs.cpp  rnnt_attrs.h  softmax_neon.h  stfft.cpp  stfft.h  test_pulse.c  test_softmax.cpp  tokenizer.h  wavcommon.h  wavread.cpp  wavread.h
common/: NEON_2_SSE.h  buf_type.h  common_neon.h  softmax_neon.h  thr_queue.cpp  thr_queue.h
pulse/: pulse_rec.c  pulse_rec.h
sp/: bpe_model.cc  bpe_model.h  common.h  init.h  model_factory.cc  model_interface.h  sentencepiece_processor.cc  sentencepiece_processor.h  util.h
wav/: wav_buf_simulator.cpp  wav_buf_simulator.h
